--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "vite-plugin-lazy-import": "^1.0.7"
   },
   "dependencies": {
+    "ant-design-vue": "4.x",
     "dexie": "^4.0.11",
     "electron-squirrel-startup": "^1.0.1",
+    "ulid": "^2.3.0",
     "vue": "^3.5.13",
     "vxe-table": "^4.10.5"
   }
