--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vue-macros/reactivity-transform": "^1.1.6",
     "@vue/compiler-sfc": "^3.5.13",
     "electron": "34.0.1",
+    "electron-squirrel-startup": "^1.0.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "sass": "^1.83.4",
@@ -51,8 +52,8 @@
   "dependencies": {
     "ant-design-vue": "4.x",
     "dexie": "^4.0.11",
-    "electron-squirrel-startup": "^1.0.1",
+    "ulid": "^2.3.0",
     "vue": "^3.5.13",
-    "vxe-table": "^4.10.5"
+    "vxe-table": "^4.10.15"
   }
 }
