--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dexie": "^4.0.11",
     "ulid": "^2.3.0",
     "vue": "^3.5.13",
+    "vxe-pc-ui": "^4.3.90",
     "vxe-table": "^4.10.15"
   }
 }
